[package]
name = "lib4ap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.9.2"
reqwest = { version = "0.11.9", features = ["json", "multipart"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
url = "^2.2"
