[package]
name = "lib4ap"
version = "0.1.1"
edition = "2021"
license = "LGPL-3.0-only"
authors = ["cozyGalvinism"]
include = ["src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.9.2"
reqwest = { version = "0.11.9", features = ["json", "multipart"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
url = "^2.2"

[dev-dependencies]
dotenv = "0.15.0"
